Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2702

--max-connections not work when using cluster

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 0.6
    • 0.7
    • C++ Broker
    • None
    • linux and using openais for cluster

    Description

      On Linux ,when start borker(qpidd) with --cluster-name,then --max-connections option not work.

      Attachments

        Activity

          People

            aconway Alan Conway
            lujah creator wang
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 240h
                240h
                Remaining:
                Remaining Estimate - 240h
                240h
                Logged:
                Time Spent - Not Specified
                Not Specified