QPID-2702 --max-connections does not work when using cluster.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@967215 13f79535-47bb-0310-9956-ffa450edef68